--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,18 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+.app {
+    display: grid;
+    grid-template-rows: 150px auto;
+}
+
+.app_main {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px 8%;
+}
+
+.task_column {
+    width: 33.33%;
+    margin: 20px;
+}
